# moos-ivp-jetyak

./: .gitmodules  README  setup.sh  setup_static_ip.txt
missions/alpha_jetyak/: alpha.moos  launch.sh  launch_jetyak.sh  launch_shoreside.sh  meta_jetyak.moos  meta_shoreside.moos  meta_vehicle.moos  targ_shoreside.moos
missions/bravo_jetyak/jetyak/: launch_heron.sh  meta_heron.bhv  meta_heron.moos
missions/bravo_jetyak/shoreside/: launch_shoreside.sh  meta_shoreside.moos
missions/pixhawk_dev/: alpha.moos  alpha.moos++  launch_kayak_front_seat.sh  launch_shoreside.sh  launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos  plug_iPX4.moos  plug_pMavlink.moos  plug_pSetPointFeeder.moos
missions/single_vehicle_pos_estimate/: launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos  plug_uFldMessageHandler.moos  plug_uTimerScript.moos
missions/single_vehicle_pos_estimate_MAVLINK/: AFTER_GPS_FIX.sh  launch.sh  launch_shoreside.sh  launch_source.sh  launch_vehicle.sh  meta_source.bhv  meta_source.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pPositionEstimate.moos  plug_uFldNodeBroker.moos
missions/two_vehicle_pos_estimate/: jetyak1.moos  jetyak2.moos  jetyak3.moos  jetyak_moos_sim.py  launch.sh  meta_shoreside.moos  plug_pGenerateBRG.moos  plug_pHelmIvP.moos  plug_pMulti_Localization_primary.moos  plug_pMulti_Localization_secondary.moos  plug_pMulti_TMA_secondary.moos  plug_pShare_secondary.moos  plug_pSingle_Localization.moos  target.bhv
missions/two_vehicle_pos_estimate_MAVLINK/: clean.sh  launch.sh  plug_pHelmIvP.moos  plug_pMulti_TMA_primary.moos  plug_pShare_primary.moos  plug_pShare_target.moos  plug_pTGT_Simulator.moos  plug_uFldMessageHandler.moos  shoreside.moos  target.moos
missions/two_vehicle_pos_estimate_MAVLINK/jetyak/: jetyak1.bhv  jetyak1.moos  jetyak2.bhv  jetyak2.moos  jetyak3.bhv  jetyak3.moos
missions/two_vehicle_pos_estimate_MAVLINK/shoreside/: meta_shoreside.moos
src/: CMakeLists.txt
src/iArduSubComms/: ArduSubComms.cpp  ArduSubComms.h  CMakeLists.txt  iArduSubComms.moos  main.cpp
src/iMavlinkOffboardController/: CMakeLists.txt  MavlinkOffboardController.cpp  MavlinkOffboardController.h  MavlinkOffboardController_Info.cpp  MavlinkOffboardController_Info.h  iMavlinkOffboardController.moos  main.cpp
src/pMavlinkConverter/: MavlinkConverter.cpp  MavlinkConverter.h  MavlinkConverter_Info.cpp
src/pSetPointFeeder/: CMakeLists.txt  SetPointFeeder.cpp  SetPointFeeder.h  SetPointFeeder_Info.cpp  SetPointFeeder_Info.h  main.cpp
